--- a/books-vanilla.html
+++ b/books-vanilla.html
@@ -9,7 +9,7 @@
     <h1>Google Books API</h1>
     <ul id="books"></ul>
     <script>
-        var key='AIzaSyDGu2Ga6XchjNoDi1FRaHe8oxhpCwmdN-E';
+        var key="Removed"
         var url = 'https://www.googleapis.com/books/v1/volumes?q=';
         var search = 'javascript';
 
